[package]
name = "session"
version = "0.1.1"
authors = [
    "Dan Hartig <kingledion@gmail.com>"
    ]
description = "A wrapper for `actix_web::Session` that adds tokens and expiration"
keywords = ["http", "session", "token", "authentication"]
repository = "https://github.com/tucenghi/session.git"
license = "MIT"
edition = "2021"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
actix-session = {version = "0.6", features = ["cookie-session"]}
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
actix-web = {version = "4"}